--- a/css/main.css
+++ b/css/main.css
@@ -110,9 +110,27 @@ label {
  align-items: center;
 }
 
+.menu_fon {
+ display: block;
+ background-color: black;
+ opacity: 0.7;
+ height: calc(100% - 60px);
+ width: 100%;
+ position: fixed;
+ top: 60px;
+ right: -100%;
+ z-index: 888;
+ transition: all 0.5s ease;
+}
+
+.menu_fon-active {
+ right: 0;
+}
+
 .header__menu {
  max-width: 710px;
  width: calc(100% - 470px);
+ z-index: 999;
 }
 
 .menu {
@@ -240,7 +258,7 @@ label {
 .section__banner {
  position: relative;
  height: auto;/* margin-top: 120px;
-                                             max-width: 1210px;*/
+ max-width: 1210px;*/
  box-sizing: border-box;
 }
 
@@ -652,9 +670,17 @@ label {
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width:320px) and (max-width:1023px) {
+ .container,
+ .row,
+ .col {
+  margin: 0 auto;
+  padding: 0;
+ }
+
  .header {
   min-height: 60px;
   max-width: 100vw;
+  box-sizing: border-box;
  }
 
  .header__logo {
@@ -700,10 +726,9 @@ label {
   float: right;
   margin: 0;
   overflow: hidden;
-  padding: 18px 20px;
+  padding: 17px 10px;
   width: 40px;
   position: relative;
-  right: 5px;
  }
 
  header #mobile-menu-btn span {
@@ -715,7 +740,7 @@ label {
   position: relative;
   top: 0;
   transition: all 0.7s ease 0s;
-  width: 70%;
+  width: 90%;
   opacity: 1;
  }
 
@@ -737,15 +762,15 @@ label {
  }
 
  /*
-  header #menu { 
-   height: 100%;
-   width: 100%;
-   display: block;
-   z-index: 9999999;
-   background: #f2fbfe;
-   padding: 0;
-   transition: 0.7s; 
-  }
+ header #menu {
+ height: 100%;
+ width: 100%;
+ display: block;
+ z-index: 9999999;
+ background: #f2fbfe;
+ padding: 0;
+ transition: 0.7s;
+ }
  */
  header .header__menu.active {
   right: 0;
@@ -785,7 +810,7 @@ label {
   cursor: pointer;
   float: right;
   width: 100%;
-  padding: 0 15px;
+  padding: 0 5px;
   text-align: right;
   height: 60px;
   line-height: 60px;
@@ -802,7 +827,7 @@ label {
 
  /*
  .menu-item a:hover {
-  background-color: lightgrey;
+ background-color: lightgrey;
  }*/
  .menu-item_submenu {
   position: absolute;
@@ -813,7 +838,7 @@ label {
   visibility: hidden;
   opacity: 0;
   right: 60vw;
-  top: 0;
+  top: -3px;
   box-sizing: border-box;
   transition: opacity 0.7s ease;
  }
@@ -837,17 +862,6 @@ label {
   transition: opacity 0.7s ease;
  }
 
- .banner__group-text {
-  position: relative;
-  display: block;
-  top: 235px;
-  right: 10px;
-  width: 90vw;
-  letter-spacing: 2px;
-  line-height: 2;
-  max-height: 140px;
- }
-
  .header__banner {
   position: relative;
   width: 100vw;
@@ -859,9 +873,27 @@ label {
   margin: 0 auto;
  }
 
+ .banner__group-text {
+  position: relative;
+  display: block;
+  top: 300px;
+  font-size: 16px;
+  right: 10px;
+  width: 90vw;
+  letter-spacing: 1px;
+  line-height: 20px;
+  max-height: 80px;
+ }
+
  .banner__title {
-  font-size: 18px;
+  font-size: 21px;
   font-weight: 600;
+ }
+
+ .banner__descripton {
+  font-size: 13px;
+  letter-spacing: 0.7px;
+  font-family: Rubik;
  }
 
  .search__section {
@@ -876,7 +908,7 @@ label {
  .inner-flex {
   display: block;
   min-height: 40px;
-  width: 80%;
+  width: 90%;
   text-align: right;
   margin: 0 auto;
  }
@@ -922,7 +954,6 @@ label {
   letter-spacing: 2px;
   line-height: 40px;
   width: 100%;
-  float: left;
  }
 
  .search__form form {
@@ -937,8 +968,8 @@ label {
   display: inline-block;
   padding: 12px;
   margin: 5px auto;
-  width: 72vw;
-  max-width: 72vw;
+  width: 80vw;
+  max-width: 80vw;
  }
 
  .wpcf7-submit {
@@ -948,7 +979,7 @@ label {
   border: 0;
   box-sizing: border-box;
   display: block;
-  margin: 0 auto;
+  margin: 5 auto;
   cursor: pointer;
   transition: all 0.7s ease;
  }
@@ -969,23 +1000,68 @@ label {
  .section1__item {
   width: 90%;
   padding: 0 5%;
-  margin: 25px auto;
+  margin: 10px auto;
+ }
+
+ .section1__item-img {
+  margin-bottom: 10px;
+ }
+
+ .section1__item-img img {
+  width: auto;
+  height: auto;
+  min-width: 45px;
+  min-height: 40px;
+ }
+
+ .section1__item-title,
+ .section2__item-title {
+  font-size: 23px;
+  color: rgb(0, 184, 241);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 5px;
+ }
+
+ .section2 {
+  width: 100%;
+  text-align: center;
+  background: #f2fbfe;
+  padding-top: 48px;
+  margin-bottom: 10px;
  }
 
  .section2__list {
   display: inline-flex;
   justify-content: space-around;
   max-width: 1210px;
-  padding-bottom: 60px;
+  padding-bottom: 20px;
   flex-wrap: wrap;
   flex-direction: column-reverse;
  }
 
  .section2__item {
   width: 90%;
-  margin: 15px auto;
+  margin: 10px auto;
   background-color: #fff;
-  padding-bottom: 40px;
+  padding-bottom: 15px;
+ }
+
+ .section2__item-img {
+  margin-bottom: 15px;
+ }
+
+ .section2__item-img img {
+  margin-top: 20px;
+  height: 45px;
+ }
+
+ .footer {
+  max-width: 1210px;
+  margin: 0px auto;
+  font-family: 'Rubik', sans-serif;
+  padding-bottom: 0px;
  }
 
  .footer__list {
@@ -997,28 +1073,69 @@ label {
  }
 
  .footer__item {
-  width: 90%;
-  padding: 0 15px;
-  margin: 35px auto;
+  width: 97%;
+  padding: 0 5px;
+  margin: 20px auto;
   height: 180px;
  }
 
- .footer__bottom {
-  margin: 140px auto 0 auto;
+ .footer__cards img {
+  margin-right: 0px;
  }
 
- .footer__bottom img {
-  margin-left: 5%;
+ .footer__bottom {
+  margin: 60px auto 0 auto;
+  font-size: 13px;
  }
 
  .footer__bottom-copyright {
-  margin-right: 5%;
+  margin: 0px auto;
+  clear: both;
+  width: 72%;
+  height: 21px;
+  display: block;
+  float: unset;
+  text-align: center;
+ }
+
+ .footer__links {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  justify-content: center;
+  margin: 0 auto;
+  position: relative;
+ }
+
+ .footer__bottom a {
+  clear: both;
+  height: 21px;
+  display: block;
+  float: unset;
+  text-align: center;
+ }
+
+ .footer__bottom-text {
+  line-height: 20px;
+  float: unset;
+ }
+
+ .footer__bottom img {
+  margin: 0 auto;
+  float: unset;
  }
 
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width:768px) and (max-width:1024px) {
+ .container,
+ .row,
+ .col {
+  margin: 0 auto;
+  padding: 0;
+ }
+
  .search__number {
   color: #233582;
   font-size: 19px;
@@ -1026,8 +1143,16 @@ label {
   margin-left: 10px;
   letter-spacing: 2px;
   line-height: 40px;
-  width: 48%;
+  width: auto;
   float: left;
+ }
+
+ .search-phone__group {
+  justify-content: flex-end;
+  align-items: center;
+  width: 49%;
+  display: inline-flex;
+  font-family: 'Rubik', sans-serif;
  }
 
  .phone__text {
@@ -1036,15 +1161,28 @@ label {
   margin-left: 5px;
   display: inline-block;
   line-height: 40px;
-  width: 49%;
+  width: auto;
  }
 
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width:1024px) and (max-width:1200px) {
+ .container,
+ .row,
+ .col {
+  margin: 0 auto;
+  padding: 0;
+ }
+
  .header {
-  padding: 0 15px;
+  padding: 0;
+  width: 100vw;
+ }
+
+ .header .col {
+  display: inline-flex;
+  justify-content: space-between;
  }
 
  .header__logo,
@@ -1054,6 +1192,13 @@ label {
   display: flex;
   float: right;
   box-sizing: border-box;
+ }
+
+ .header__logo {
+  border-left: 1px solid #e5edee;
+  margin-top: 5px;
+  padding-left: 17px;
+  width: 240px;
  }
 
  .header__menu {
@@ -1074,6 +1219,7 @@ label {
 
  .header__phone {
   padding-left: 10px;
+  margin-left: -40px;
  }
 
  .search__section {
@@ -1094,12 +1240,16 @@ label {
   max-width: 182px;
  }
 
+ .footer__links {
+  margin-left: -30px;
+ }
+
  .footer__bottom img {
   margin-left: 25px;
  }
 
  .footer__bottom-copyright {
-  margin-right: 25px;
+  margin-right: 50px;
  }
 
 }
