--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,7 @@ label {
 .section__banner {
  position: relative;
  height: auto;/* margin-top: 120px;
- max-width: 1210px;*/
+          max-width: 1210px;*/
  box-sizing: border-box;
 }
 
@@ -761,17 +761,6 @@ label {
   background-color: #fff;
  }
 
- /*
- header #menu {
- height: 100%;
- width: 100%;
- display: block;
- z-index: 9999999;
- background: #f2fbfe;
- padding: 0;
- transition: 0.7s;
- }
- */
  header .header__menu.active {
   right: 0;
   transition: 0.7s;
@@ -804,6 +793,7 @@ label {
  }
 
  .menu-item {
+  position: relative;
   list-style: none;
   display: block;
   margin: 3px 0;
@@ -812,35 +802,41 @@ label {
   width: 100%;
   padding: 0 5px;
   text-align: right;
-  height: 60px;
-  line-height: 60px;
+  height: auto;
   box-sizing: border-box;
   border-bottom: 1px grey solid;
  }
 
  .menu-item a {
   display: block;
-  height: 100%;
+  height: 60px;
   width: 100%;
   transition: all 0.7s ease;
  }
 
- /*
- .menu-item a:hover {
- background-color: lightgrey;
- }*/
  .menu-item_submenu {
-  position: absolute;
+  position: relative;
   margin: 0;
   padding: 0;
-  width: 70%;
+  width: 100%;
   background-color: #f2fbfe;
   visibility: hidden;
   opacity: 0;
-  right: 60vw;
-  top: -3px;
+  height: 0;
   box-sizing: border-box;
   transition: opacity 0.7s ease;
+ }
+
+ .has_submenu::after {
+  display: block;
+  content: '';
+  width: 10px;
+  height: 5px;
+  background: url(../img/menu-arrow.png) no-repeat center;
+  position: absolute;
+  left: 10px;
+  top: 20px;
+  transition: all 0.3s ease 0s;
  }
 
  .menu-item_submenu li {
@@ -860,6 +856,7 @@ label {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.7s ease;
+  height: auto;
  }
 
  .header__banner {
@@ -1136,23 +1133,251 @@ label {
   padding: 0;
  }
 
- .search__number {
-  color: #233582;
-  font-size: 19px;
-  font-weight: bold;
-  margin-left: 10px;
-  letter-spacing: 2px;
-  line-height: 40px;
+ .header {
+  min-height: 60px;
+  max-width: 100vw;
+  box-sizing: border-box;
+ }
+
+ .header__logo {
+  margin: 0 auto;
+  margin-top: 0;
+  border: none;
+  position: fixed;
+  top: 0px;
+  height: 60px;
+  left: 0;
+  display: block;
   width: auto;
-  float: left;
+  background-color: #fff;
+  box-sizing: border-box;
+ }
+
+ .logo__pic img {
+  height: 40px;
+  margin: 10px;
+ }
+
+ .header__phone {
+  position: fixed;
+  left: 0;
+  display: none;
+  padding-right: 15px;
+  border-right: 1px solid #e5edee;
+ }
+
+ .menu__burger {
+  display: block;
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 60px;
+  background-color: #00b8f1;
+  text-align: center;
+  cursor: pointer;
+ }
+
+ header #mobile-menu-btn {
+  display: block;
+  float: right;
+  margin: 0;
+  overflow: hidden;
+  padding: 17px 10px;
+  width: 40px;
+  position: relative;
+ }
+
+ header #mobile-menu-btn span {
+  background-color: #fff;
+  display: block;
+  height: 3px;
+  left: 0;
+  margin-top: 5px;
+  position: relative;
+  top: 0;
+  transition: all 0.7s ease 0s;
+  width: 90%;
+  opacity: 1;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(1) {
+  top: 8px;
+  transform: rotate(45deg);
+  background-color: #fff;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(2) {
+  visibility: hidden;
+  opacity: 0;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(3) {
+  top: -8px;
+  transform: rotate(-45deg);
+  background-color: #fff;
+ }
+
+ /*
+ header #menu {
+ height: 100%;
+ width: 100%;
+ display: block;
+ z-index: 9999999;
+ background: #f2fbfe;
+ padding: 0;
+ transition: 0.7s;
+ }
+ */
+ header .header__menu.active {
+  right: 0;
+  transition: 0.7s;
+ }
+
+ header .menu-header-container {
+  width: 62.5%;
+  height: 100%;
+  background: #f6f6f6;
+  padding-top: 3px;
+ }
+
+ .header__menu {
+  max-width: 300px;
+  width: 60%;
+  height: 100%;
+  position: fixed;
+  right: -100%;
+  top: 60px;
+  transition: all 0.7s ease;
+  background-color: #f2fbfe;
+ }
+
+ .menu {
+  display: block;
+ }
+
+ .menu-active {
+  right: 0;
+ }
+
+ .menu-item {
+  list-style: none;
+  display: block;
+  margin: 3px 0;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+  padding: 0 5px;
+  text-align: right;
+  height: 60px;
+  line-height: 60px;
+  box-sizing: border-box;
+  border-bottom: 1px grey solid;
+ }
+
+ .menu-item a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  transition: all 0.7s ease;
+ }
+
+ /*
+ .menu-item a:hover {
+ background-color: lightgrey;
+ }*/
+ .menu-item_submenu {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 70%;
+  background-color: #f2fbfe;
+  visibility: hidden;
+  opacity: 0;
+  right: 60vw;
+  top: -3px;
+  box-sizing: border-box;
+  transition: opacity 0.7s ease;
+ }
+
+ .menu-item_submenu li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px lightgrey solid;
+ }
+
+ .menu-item_submenu li a {
+  padding: 0 15px;
+ }
+
+ .submenu-active {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.7s ease;
+ }
+
+ .header__banner {
+  position: relative;
+  width: 100vw;
+  height: auto;
+  min-height: 400px;
+  color: #fff;
+  background: url(../img/banner.jpg) top center no-repeat;
+  padding: 0;
+  margin: 0 auto;
+ }
+
+ .banner__group-text {
+  position: relative;
+  display: block;
+  top: 300px;
+  font-size: 16px;
+  right: 10px;
+  width: 90vw;
+  letter-spacing: 1px;
+  line-height: 20px;
+  max-height: 80px;
+ }
+
+ .banner__title {
+  font-size: 21px;
+  font-weight: 600;
+ }
+
+ .banner__descripton {
+  font-size: 13px;
+  letter-spacing: 0.7px;
+  font-family: Rubik;
+ }
+
+ .search__section {
+  width: 100%;
+  margin-top: 25px;
+  padding: 33px 0;
+  background: #f2fbfe;
+  font-family: "Rubik", sans-serif;
+  display: block;
+ }
+
+ .inner-flex {
+  display: block;
+  min-height: 40px;
+  width: 90%;
+  text-align: right;
+  margin: 0 auto;
  }
 
  .search-phone__group {
-  justify-content: flex-end;
-  align-items: center;
-  width: 49%;
-  display: inline-flex;
+  width: 100%;
+  display: block;
   font-family: 'Rubik', sans-serif;
+ }
+
+ .phone__group {
+  justify-content: space-between;
+  align-items: center;
  }
 
  .phone__text {
@@ -1161,7 +1386,58 @@ label {
   margin-left: 5px;
   display: inline-block;
   line-height: 40px;
-  width: auto;
+  width: calc(100% - 200px);
+  min-width: 230px;
+  float: right;
+ }
+
+ .search__form {
+  display: block;
+  width: 100%;
+ }
+
+ .search__form .form-group {
+  display: block;
+  margin: auto;
+  justify-content: space-between;
+ }
+
+ .search__number {
+  color: #233582;
+  font-size: 19px;
+  font-weight: bold;
+  margin-left: 10px;
+  letter-spacing: 2px;
+  line-height: 40px;
+  width: 100%;
+ }
+
+ .search__form form {
+  width: 100%;
+  margin-bottom: 0;
+  margin: 0 5px;
+  text-align: center;
+ }
+
+ .wpcf7-text {
+  border-radius: 0;
+  display: inline-block;
+  padding: 12px;
+  margin: 5px auto;
+  width: 80vw;
+  max-width: 80vw;
+ }
+
+ .wpcf7-submit {
+  background-color: #61ce70;
+  width: 103px;
+  height: 38px;
+  border: 0;
+  box-sizing: border-box;
+  display: block;
+  margin: 5 auto;
+  cursor: pointer;
+  transition: all 0.7s ease;
  }
 
 }
@@ -1517,4 +1793,15 @@ label {
   font-size: 15px;
  }
 
+}
+
+.footer .container {
+ padding: 0 15px;
+ box-sizing: border-box;
+}
+
+.col-xs-12,
+.col-sm-12,
+.col-md-12 {
+ padding: 0;
 }
